fixed blurred backgound in expanded view mode

--- a/web/src/components/AvatarsList/AvatarsList.scss
+++ b/web/src/components/AvatarsList/AvatarsList.scss
@@ -129,4 +129,8 @@
       }
     }
   }
+
+  .acorn-we-applet .avatars-list-button-wrapper {
+    z-index: 0;
+  }
 }
