--- a/web/src/components/ExpandedViewMode/ExpandedViewMode.scss
+++ b/web/src/components/ExpandedViewMode/ExpandedViewMode.scss
@@ -33,6 +33,10 @@
   z-index: 1;
 }
 
+.acorn-we-applet .expanded-view-overlay {
+  position: absolute;
+}
+
 .breadcrumbs-overlay {
   position: fixed;
   top: 0.5rem;
